...
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainNavPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

...
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profilesBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:padding="16dp"
            android:text="@string/autoclicker_profiles"
            app:icon="@drawable/ic_mouse" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recordingsBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:padding="16dp"
            android:text="@string/input_recordings"
...
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="start|center_vertical"
            android:padding="16dp"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profilesPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="gone">
...
            android:paddingBottom="16dp"
            android:text="@string/automation_variations"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/configsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addVariationBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_new_variation" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recordingsPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:visibility="gone">
...
            android:paddingBottom="16dp"
            android:text="@string/input_recordings"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recordingsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="8dp" />
    </LinearLayout>

...
